Many of Ricardo's comments were addressed.

--- a/Acknowledgements.tex
+++ b/Acknowledgements.tex
@@ -1,4 +1,4 @@
 \section{Acknowledgements}
 
- We express our appreciation to Art Frankel, PhD, of the U.S. Geological Survey, Washington, DC, who kindly provided the Smoothed Probabilistic Seismic Hazard Analysis (PSHA) package. We are also very thankful to Andrzej Kijko, PhD, Director of the University of Pretoria Natural Hazard Centre, Pretoria, Africa, who generously provided the software to compute seismicity parameters. We wish to thank Mehdi Zare, PhD, engineering seismologist and Associate Professor of Engineering Seismology at the International Institute of Earthquake Engineering and Seismology, Tehran, Iran, for  kindly providing the uniform historical seismic catalog. We also are very grateful to the International Institute of Earthquake Engineering and Seismology of Iran, Tehran, Iran, for providing the uniform instrumental earthquake catalog. 
+ We express our appreciation to Art Frankel, PhD, of the U.S. Geological Survey, Washington, DC, who kindly provided the Smoothed Probabilistic Seismic Hazard Analysis (PSHA) package. We are also very thankful to Andrzej Kijko, Director of the University of Pretoria Natural Hazard Centre, Pretoria, Africa, who generously provided the software to compute seismicity parameters. We wish to thank Mehdi Zare, International Institute of Earthquake Engineering and Seismology, Tehran, Iran, for  kindly providing the uniform historical seismic catalog. We also are very grateful to the International Institute of Earthquake Engineering and Seismology of Iran, Tehran, Iran, for providing the uniform instrumental earthquake catalog. 
 
