--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,3 +1,3 @@
 \section{Conclusion}
 
-The aim of this study is to conduct a new probabilistic seismic hazard assessment for northern Iran using updated seismic catalogs. Seismic hazard is evaluated over three regions (Azerbaijan, Tehran, Kopeh-Dagh) using the smoothed background seismicity. According to our study, in the Alborz  and Azerbaijan regions substantial seismic hazard is observed.  We studied probabilistic seismic hazard based on smoothed seismicity using historical and instrumental data. The results of this paper can be addressed in three main conclusions. First, probabilistic seismic hazard analysis using smoothed seismicity is sufficient for 10\% probability of exceedance. Second, since this study is based solely on historical and instrumental data, places with very close PGA values to those studies with considering faults as a primary source of seismicity, show normal and predictable seismic activity. Third, places with lower hazard values compared to other studies show anomalous seismic activity and suggest the idea of expecting more and bigger events in the future. As mentioned before, probabilistic seismic hazard analysis based on smoothed seismicity is very sensitive to input parameters (e.g., correlation distance, $b-value$, catalog completeness, and threshold magnitude for structural damage). Studying the sensitivity rate of these parameters could develop a more trustworthy result. Maps presented in this paper are for illustrative purposes only, and are not intended to be used in any application. 
+A new probabilistic seismic hazard assessment for northern Iran using updated seismic catalogs. Seismic hazard is evaluated over three regions (Azerbaijan, Tehran, Kopeh-Dagh) using the smoothed background seismicity. According to our study, in the Alborz  and Azerbaijan regions substantial seismic hazard is observed.  We studied probabilistic seismic hazard based on smoothed seismicity using historical and instrumental data. The results of this paper can be addressed in three main conclusions. First, probabilistic seismic hazard analysis using smoothed seismicity is sufficient for 10\% probability of exceedance. Second, since this study is based solely on historical and instrumental data, places with very close PGA values to those studies with considering faults as a primary source of seismicity, show normal and predictable seismic activity. Third, places with lower hazard values compared to other studies show anomalous seismic activity and suggest the idea of expecting more and bigger events in the future. As mentioned before, probabilistic seismic hazard analysis based on smoothed seismicity is very sensitive to input parameters (e.g., correlation distance, $b-value$, catalog completeness, and threshold magnitude for structural damage). Studying the sensitivity rate of these parameters could develop a more trustworthy result. Maps presented in this paper are for illustrative purposes only, and are not intended to be used in any application. 
