--- a/Discussion.tex
+++ b/Discussion.tex
@@ -5,7 +5,7 @@ Seismic hazard in northern Iran is computed based on background seismicity and p
 
 \begin{table}[h]
 \centering
-\caption{Comparison of PGA, from different studies for selected cities in Northern Iran. (V2009:  \citet{vafaie2011}), G2008: \citet{Ghodrati2008}, G2010: \citet{Ghodrati2010},  Ah2013: \citet{Ahmadi2013}, G2003:  \citet{Ghodrati2003}, G2011: \citet{Ghodrati2011}, Ab2014: \citet{Abdollahzadeh2014} , Ra2012: \citet{Rahgozar2012}) }
+\caption{Comparison of PGA, from different studies for selected cities in Northern Iran. (V2009:  \citet{vafaie2011}), G2008: \citet{Ghodrati2008}, G2010: \citet{Ghodrati2010},  Ah2013: \citet{Ahmadi2013}, G2003:  \citet{Ghodrati2003}, G2011: \citet{Ghodrati2011}, Ab2014: \citet{Abdollahzadeh2014} , Ra2012: \citet{Rahgozar2012} , Ak2011: \citet{Akbari2011} ) }
 \begin{tabular}{ | c | c | c | c | c | c | c | c | c | c |}
 
 
