--- a/PSHA.bib
+++ b/PSHA.bib
@@ -25,6 +25,21 @@
   Timestamp                = {2015.07.18}
 }
 
+@Article{Akbari2011,
+  Title                    = {Seismic microzonation of Mashhad city, northeast Iran},
+  Author                   = {Akbari, Majid and Ghafoori, Mohammad and Moghaddas, Naser Hafezi and Lashkaripour, Gholam Reza},
+  Journal                  = {Annals of geophysics},
+  Year                     = {2011},
+  Number                   = {4},
+  Pages                    = {424--434},
+  Volume                   = {54},
+
+  __markedentry            = {[naeem:6]},
+  Owner                    = {naeem},
+  Publisher                = {Istituto Nazionale di Geofisica e Vulcanologia-INGV},
+  Timestamp                = {2015.10.22}
+}
+
 @Article{Akinci2004,
   Title                    = {Seismic hazard estimate in the {A}lps and {A}pennines ({I}taly) using smoothed historical seismicity and regionalized predictive ground-motion relationships},
   Author                   = {Akinci, A and Mueller, C and Malagnini, L and Lombardi, AM},
@@ -163,8 +178,6 @@
   Number                   = {1},
   Pages                    = {99--138},
   Volume                   = {24},
-
-  __markedentry            = {[naeem:]},
   Owner                    = {naeem},
   Timestamp                = {2015.08.24}
 }
@@ -203,6 +216,7 @@
   Number                   = {1},
   Pages                    = {173--215},
   Volume                   = {24},
+
   Owner                    = {naeem},
   Timestamp                = {2015.08.24}
 }
@@ -334,6 +348,7 @@
   Number                   = {6},
   Pages                    = {200--203},
   Volume                   = {4},
+
   Owner                    = {naeem},
   Timestamp                = {2015.07.18}
 }
@@ -407,6 +422,7 @@
   Number                   = {4},
   Pages                    = {1111--1138},
   Volume                   = {20},
+
   Owner                    = {naeem},
   Timestamp                = {2015.08.08}
 }
@@ -579,7 +595,7 @@
   Pages                    = {3234--3247},
   Volume                   = {99},
 
-  __markedentry            = {[naeem:6]},
+  __markedentry            = {[naeem:]},
   Owner                    = {naeem},
   Publisher                = {Seismological Society of America},
   Timestamp                = {2015.08.24}
