--- a/completness_test.tex
+++ b/completness_test.tex
@@ -1,6 +1,6 @@
 \section{Completeness tests}
-For the smoothed seismicity method, completeness of each magnitude in the catalog is an important factor. To access catalog completeness, according to \citet{Frankel1995}, we made plots of the cumulative number of events against time for different regions.   Fig.~\ref{fig:comptest} shows the completeness of data for each magnitude threshold in three different regions.
-A uniform rise of cumulative number of earthquake in each magnitude big, defines the threshold for catalog completeness.
+For the smoothed seismicity method, completeness of each magnitude in the catalog is an important factor. In order to determine the catalog completeness, according to \citet{Frankel1995}, we made plots of the cumulative number of events against time for different regions.   Fig.~\ref{fig:comptest} shows the completeness of data for each magnitude threshold in three different regions.
+A uniform rise of cumulative number of earthquake in each magnitude big, defines the threshold for catalog completeness. Fig.~\ref{fig:comptest} (a,b,c) show the plot of earthquake magnitude with time. Fig.~\ref{fig:comptest}(d-o) present the cumulative number of earthquake with magnitude, in defined ranges. We define a completeness of each magnitude range at a time which the cumulative number of earthquake increase linearly with time. These times which presents the completeness of the catalog of each region for different moment magnitude are represented at Table 1. We assume the catalog for earthquakes with magnitude greater than $M_w=7$ is complete from the first historical earthquake report. 
 
 \begin{figure} [H]
 \centering
@@ -9,7 +9,7 @@ A uniform rise of cumulative number of earthquake in each magnitude big, defines
 \label{fig:comptest}
 \end{figure}
 
-We assume the catalog for earthquakes with magnitude greater than $M_w=7$ is complete from the first historical earthquake report. Table 1 presents the completeness of catalog of each region for different moment magnitudes.
+
 
 \begin{table}[h]
 \centering
