--- a/declustering.tex
+++ b/declustering.tex
@@ -1,6 +1,6 @@
 \section{Declustering}
 
-It is generally assumed that the seismicity of each tectonic seismic source follows a Poissonian occurrence process. Therefore, in order to accomplish this, we declustered the earthquake catalog. In compiling the catalog of events, foreshocks and aftershocks were removed using a declustering methodology \citep{Gardner1974}. Fig.~\ref{fig:instrumental} shows the epicenter of declustered instrumental  earthquakes.
+It is generally assumed that the seismicity of each tectonic seismic source follows a Poissonian occurrence process. Therefore, in order to accomplish this, we declustered the earthquake catalog. In compiling the catalog of events, foreshocks and aftershocks were removed using a declustering methodology \citep{Gardner1974}. From 10296 earthquake event we removed 1013 Foreshocks and 3496 aftershocks. Fig.~\ref{fig:instrumental} shows the epicenter of declustered instrumental  earthquakes.
 
 \begin{figure} [H]
 \centering
