--- a/introduction.tex
+++ b/introduction.tex
@@ -9,7 +9,7 @@ In north central Iran, in the Alborz region, a historical earthquake sequence oc
 \noindent
 Regarding historical earthquakes and the need for constructing new buildings and infrastructure, different seismic hazard analyses were conducted in Iran. Dividing Iran into 20 tectonic seismic regions, \citet{Tavakoli1999} prepared iso-acceleration contour lines and seismic hazard zonation for return periods of 75 and 475 years or 50\% and 10\% probability of exceedance in 50 years, based on major known lines and area source models. According to their study, North Tabriz fault zone and north of Tehran fault zone are in the highest acceleration contour. Maximum mean acceleration in the vicinity of these tectonic elements is predicted to be around 0.45 $g$ and 0.3 $g$ for a return period of 475 and 75 years, respectively. In the smaller scale, using the logic tree approach to compensate for uncertainties in the attenuation relationship, \citet{Ghodrati2003} presented a probabilistic seismic hazard assessment of metropolitan Tehran, the capital of Iran. The results showed that the PGA ranges from 0.27-0.46 $g$ for a return period of 475 years and from 0.33-0.55 $g$ for a return period of 950 years. In the last three decades, different seismic hazard analysis studies substantially improved the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. \citet{Ghodrati2013} conducted a seismic risk assessment for the city of Tehran using the Hazus method \citep{FEMA2003}. They represent that these efforts successfully decrease the total mean damage ratio in Tehran from 0.302739 in 1996 to 0.272859 in 2006.  Even though the results are satisfactory, the continuous improvement of procedures for defining the seismic hazard at regional (national) and local levels is essential for the optimum design of earthquake-resistant structures. In this study we use another model to overcome the aleatory and epistemic uncertainties regarding earthquake location and source mechanism in northern Iran.\\
 
-In this study we used smoothed seismicity \citep{Frankel1995}. We divided northern Iran in three seismotectonic regions including Azerbaijan, Alborz, and Kopek Dagh. We computed seismic parameters and catalog completeness in these regions. Zagros and Central Iran seismotectonic regions have considerable effect on the Northern part. We used \citet{Karimiparidari2013} seismicity parameters in these regions.  We consider the MW5 earthquake as a threshold magnitude  for structural damage. In order to consider damage to the historical masonry building we also considered Mw45 as a threshold for structural damage to this building. 
+In this study we used smoothed seismicity \citep{Frankel1995}. We divided northern Iran in three seismotectonic regions including Azerbaijan, Alborz, and Kopek Dagh. We also consider seismicity of part of Central-East Iran and Zagros regions. We computed seismic parameters and catalog completeness in these regions. Zagros and Central Iran seismotectonic regions have considerable effect on the Northern part. We used \citet{Karimiparidari2013} seismicity parameters in these regions.  We consider the $Mw5$ earthquake as a threshold magnitude  for structural damage. In order to consider damage to the historical masonry building we also considered $Mw4.5$ as a threshold for structural damage to these kind of building. 
 
 
 \begin{figure} [H]
@@ -35,23 +35,21 @@ The smoothed-seismicity method simply assumes that patterns of historical earthq
 
 \section{Seismic regions and seismicity rate}
 With respect to different seismicity rates of the regions \cite{Nemati2015}, as well as the completeness of the seismic catalog, the study region is divided into three zones. Each of these zones is characterized by its respective seismicity parameters values, including b-value and maximum magnitude ($M{_{max}}$). A review of Iran's historical earthquakes (pre 1900) is provided by \citet{Ambraseys2005}. \citet{Karimiparidari2013} converted all historical earthquakes to a unified magnitude ($M_w$), which we use as a historical catalog. The International Institute of Earthquake Engineering and Seismology of Iran \citep{IIEES} has reported the instrumental data, which also involves earthquakes from border countries which have considerable affect in the seismicity of Iran's border cities. 
-In the present study, historical data are integrated with instrumental data. For the purpose of this research, each seismic region is defined as a rectangular area bounded by latitudes of $34^{\circ}-40^{\circ}$ N, and longitudes of $43.5^{\circ}-48^{\circ}$ E, $48^{\circ}-58^{\circ}$ E, and $58^{\circ}-61.5^{\circ}$ E for Azerbaijan, Alborz, and Kopeh-Dagh, respectively. 
-
+In the present study, historical data are integrated with instrumental data. We use the tectonic seismic division to categorized the data according to the seismic tectonic regions. 
 \subsection{Alborz Mountain Range (Alborz)}
-Tehran region has active reverse faults, which are parallel to the northwest-trending structural gain of the Alborz Mountains belt. Here a series of historical earthquakes occurred within a time period of more than 1100 years. Four earthquakes with magnitude more than 7 devastated the Tehran region in four centuries period, from 743 to 1177, but in the last 800 years, only one earthquake at 1830 has struck this region. At least three damaging earthquakes in 958 (western segments), 1655 (eastern segments), and 1830 (central segments), ruptured adjacent segments of the Mosha fault, located in northern Tehran \citep{Berberian1999}.
-The North Tehran Thrust (NTT) adds more complexity due to the presence of south-dipping reverse faults, which are in part blind, such as the Davudieh, Shian, and Bagh-E Feyz \citep{Berberian1999}.
+Tehran region has active reverse faults, which are parallel to the northwest-trending structural gain of the Alborz Mountains belt. Here a series of historical earthquakes occurred within a time period of more than 1100 years. Four earthquakes with magnitude more than 7 devastated the Tehran region in four centuries period, from 743 to 1177, but in the last 800 years, only one earthquake at 1830 has struck this region. At least three damaging earthquakes in 958 (western segments), 1655 (eastern segments), and 1830 (central segments), ruptured adjacent segments of the Mosha fault, located in northern Tehran.
+The North Tehran Thrust (NTT) adds more complexity due to the presence of south-dipping reverse faults, which are in part blind, such as the Davudieh, Shian, and Bagh-E Feyz.
 The northwest continuation of the Alborz Mountains, known as the Rocks of the Talesh Mountains, have been thrust northeastward and eastward over rocks of the south Caspian depression. An earthquake with Ms 6.0 in 1978 led to a focal mechanism consistent with a low-angle thrust \citep{Berberian1999}.
 
 
 
 \subsection{Azerbaijan}
 There were three earthquakes from 1721-86 that ruptured the North Tabriz Fault system from southeast to northwest. The Tabriz region is in the Araxes structural block of northwestern Iran, southwest of the continuation of the western Alborz Mountains towards the Caucasus. The North Tabriz Fault (NTF) is a complex northwest-trending structure, which contains evidence observed on aerial photographs, and vertical displacement with the north side up, of right-lateral strike-slip displacement \citep{Berberian1999}.
-The NTF system and nearby reverse faults ruptured from southeast to northwest in three earthquakes over 65 years: the Shebli earthquake with magnitude 7.3 in 1721 on the southeastern NTF with a surface rupture more than 35 km long, reported by \citet{Jones1834} the Tabriz earthquake with magnitude 7.4 in 1780 on the northwestern NTF, with a surface rupture more than 42 km long and vertical separation of 2 to 4 $m$; and the Marand-Mishu earthquake with magnitude of 6.3 in 1786 on the Mishu reverse fault and the Sufian segment of the NTF. Another earthquake with  magnitude 5.5 struck the Tasuj reverse fault farther west in 1807 and an earthquake of M 6.7 took place along the South Bozqush reverse fault farther southeast in 1879 \citep{Berberian1999}.
-Prior to the 1721-86 earthquake sequence, Tabriz was shaken by earthquakes in 858 (M 6.0), 1042 (M 7.3), 1273 (M ~ 6.5), and 1304 (M 6.7). However, their meizoseismal zones are not well known and so could not be used to identify which faults were responsible for them. Earthquakes in 1273 and 1304 were temporal clusters like the 1721-86 events, but the direction of propagation is not known \citep{Berberian1997, Berberian1999}.
+The NTF system and nearby reverse faults ruptured from southeast to northwest in three earthquakes over 65 years: the Shebli earthquake with magnitude 7.3 in 1721 on the southeastern NTF with a surface rupture more than 35 km long, reported by \citet{Jones1834} the Tabriz earthquake with magnitude 7.4 in 1780 on the northwestern NTF, with a surface rupture more than 42 km long and vertical separation of 2 to 4 $m$; and the Marand-Mishu earthquake with magnitude of 6.3 in 1786 on the Mishu reverse fault and the Sufian segment of the NTF. Another earthquake with  magnitude 5.5 struck the Tasuj reverse fault farther west in 1807 and an earthquake of M 6.7 took place along the South Bozqush reverse fault farther southeast in 1879. Prior to the 1721-86 earthquake sequence, Tabriz was shaken by earthquakes in 858 (M 6.0), 1042 (M 7.3), 1273 (M ~ 6.5), and 1304 (M 6.7)\citep{Berberian1999}. 
 
 
 \subsection{Kopeh Dagh}
-The main Kopeh-Dagh fault system has experienced some historic earthquakes. Ashgabat, the capital city of Turkmenistan, was destroyed by an earthquake of Ms 7.2 in 1948 and destroyed more than 30 villages in Iran. This was the strongest earthquake to strike this region since at least 1455 \citep{Berberian2001}.
+The main Kopeh-Dagh fault system has experienced some historic earthquakes. Ashgabat, the capital city of Turkmenistan, was destroyed by an earthquake of Ms 7.2 in 1948 and destroyed more than 30 villages in Iran. This was the strongest earthquake to strike this region since at least 1455.
 The main Kopeh-Dagh fault consists of several partly overlapping segments parallel to the overall $NW - SE$ structure with step-overs. The regions of overlap are characterized by shorter south-dipping thrust faults striking about $E - W$ \citep{Berberian2001}. \citet{Trifonov1978} reported active displacement along the main Kopeh-Dagh fault for more than 500 km. 
 Massive destruction of the capital city of Mithradatkert is attributed to the 10 BC event Ms 7.1, roughly 30 kilometers from the border of Iran (Nesa mound) \citep{Berberian2001}.
 The Neyshabur sequence of four earthquakes between 1209 and 1405 respected the segment boundary between the Neyshabur and Binalud reverse fault system \citep{Berberian1999}.
